--- a/css-konsep-cascading/index.html
+++ b/css-konsep-cascading/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS - Konsep Cascading</title>
+    <link rel="stylesheet" href="styles/style.css">
+
+    <style>
+        p{
+            color: navy;
+        }
+
+        strong{
+            text-decoration: underline wavy;
+        }
+    </style>
 </head>
 <body>
     
+    <p style="color: green;"><strong>Lorem ipsum</strong> dolor sit amet consectetur adipisicing elit. Nihil optio odio a officia animi, fuga dignissimos! Excepturi quos ea fugiat.</p>
+
 </body>
 </html>
